updated Dockerfile, supervisor.conf and server.py to deploy in heroku

--- a/cache-service/caching-service-supervisor.conf
+++ b/cache-service/caching-service-supervisor.conf
@@ -15,9 +15,13 @@ umask = 022
 command = /usr/bin/redis-server
 priority=1
 
-[program:caching-service]
+[program:cache-service]
 directory=/cache-service
+#user = root
 command = /usr/bin/python3 server.py
-stdout_logfile = /tmp/stdout.log
-stderr_logile = /tmp/stderr.log
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+#stdout_logfile = /tmp/supervisord.log
+#stderr_logfile = /tmp/stderr.log
+redirect_stderr = true
 priority=999
